javascript/ql/test/query-tests/NodeJS/InvalidExport/tst.js
exports.a = 23;
exports = 56; // $ Alert
